--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Coca-Cola</title>
 </head>
 <body>
-    
+    <head>
+        <img src="" alt="">
+        <nav id="navegacao">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </head>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
