--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coca-Cola</title>
+    <link rel="stylesheet" href="estilo/mobile.css" media="all">
 </head>
 <body>
-    <head>
-        <img src="imgs/coca-colalogopreto.png" alt="coca-cola">
-        <nav id="navegacao">
-            <ul id="lista">
-                <li>Descobrir</li>
-                <li>Impacto</li>
-                <li>Social</li>
-                <li>Shop</li>
-                <li>Sobre Nós</li>
-            </ul>
+    <header>
+        <div id="menu">
+            <img src="imgs/coca-colalogopreto.png" alt="coca-cola">
+            <nav id="navegacao">
+                <ul id="lista">
+                    <li>Descobrir</li>
+                    <li>Impacto</li>
+                    <li>Social</li>
+                    <li>Shop</li>
+                    <li>Sobre Nós</li>
+                </ul>
+            </nav>
             <a href="#" id="botao">Registre-se</a>
-        </nav>
-    </head>
+        </div>
+    </header>
     <main>
         <section id="principal">
             <img src="imgs/principal.webp" alt="caminhao-coca">
