--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
         </section>
         <section id="secundario">
             <h2>O que há de novo?</h2>
-            <img src="imgs/secundaria  (1).jpg" alt="golelivre">
-            <h3>Promoção Gole Premiado Coca-Cola</h3>
-            <p>Sabia que beber sua Coca-Cola gelada pode levar você + 2 amigos acompanhar de pertinho a Glória Eterna? Clique abaixo e saiba mais!</p>
-            <a href="#">Saiba Mais</a>
-            video
+            <div id="bloco-secundario">
+                <img src="imgs/secundaria  (1).jpg" alt="golelivre">
+                <h3>Promoção Gole Premiado Coca-Cola</h3>
+                <p>Sabia que beber sua Coca-Cola gelada pode levar você + 2 amigos acompanhar de pertinho a Glória Eterna? Clique abaixo e saiba mais!</p>
+                <a href="#" id="saibamais">Saiba Mais</a>
+            </div>
+            <div id="video">
+                [VIDEO]
+            </div>
         </section>
         <section id="terceiro">
             <h2>Conheça nossas marcas</h2>
