site mobile finalizado

--- a/index.html
+++ b/index.html
@@ -53,10 +53,17 @@
     </main>
     <footer>
         <img src="imgs/coca-colalogowhite.png" alt="coca-cola">
-        <p>Entre em contato em caso de duvidas!</p>
-        <p>Desenvolvido por Eduastra</p>
+        <div id="linha"></div>
+        <div id="informacoes">
+            <h2>Help</h2>
+            <h2>Shop & Visit</h2>
+            <h2>Legal</h2>
+        </div>
+        <div id="rodape">
+            <p>Entre em contato em caso de duvidas!</p>
+            <p>Desenvolvido por <a href="https://www.instagram.com/eduastras/" target="_blank">Eduastra</a></p>
+        </div>
     </footer>
-
     
     <script>
         let menu = window.document.querySelector("i#icone")
