--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
                     <li><a href="#" id="sobrenos">Sobre Nós</a></li>
                 </ul>
             </nav>
-            <a href="#" class="botao">Registre-se</a>
+            <a href="#" class="botao">Registre-se</a> 
         </div>
-    </header>
+    </header>   <!-- fim do menu -->
+
     <main>
         <section id="principal">
             <div id="imagem"><img src="imgs/principal.webp" alt="caminhao-coca"></div>
         </section>
+        <!-- fim da area principal -->
+         
         <section id="secundario">
             <h2>O que há de novo?</h2>
             <div id="bloco-secundario">
@@ -39,7 +42,9 @@
             </div>
             <div id="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Yy6fByUmPuE?si=qxinEfosDelf0LpU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+            </div>            
+            <!-- fim da section secundaria -->
+
         </section>
         <section id="terceiro">
             <h2>Conheça nossas marcas</h2>
@@ -50,7 +55,9 @@
             </div>
             <a href="#" class="botao">Veja Mais</a>
         </section>
+            <!-- fim das sections e main -->
     </main>
+    
     <footer>
         <img src="imgs/coca-colalogowhite.png" alt="coca-cola">
         <div id="linha"></div>
