mobile menu bugfix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#" id="social">Social</a></li>
                     <li><a href="#" id="shop">Shop</a></li>
                     <li><a href="#" id="sobrenos">Sobre Nós</a></li>
+                    <li><a href="#" id="registre-se">Registre</a></li>
                 </ul>
             </nav>
             <a href="#" class="botao">Registre-se</a> 
