bugfix definitivo pra celulares

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div id="menu">
-            <img src="imgs/coca-colalogopreto.png" alt="coca-cola">
+            <div id="logo">
+                <img src="imgs/coca-colalogopreto.png" alt="coca-cola">
+            </div>
 
             <nav id="navegacao">
                 <i class="fa-solid fa-list" id="icone"></i>
